--- a/assets/css/basic_light_sans.sass
+++ b/assets/css/basic_light_sans.sass
@@ -52,7 +52,7 @@ main
   @extend .py-5
   // Headings
   // Set a top margin
-  @include headings(1,6,'','& > ')
+  @include headings()
     @extend .mt-4
   // Reset to margin for first child heaings in the first row columns
   .row:first-child div[class*="col"]
