--- a/_includes/widgets/libros.html
+++ b/_includes/widgets/libros.html
@@ -13,15 +13,8 @@
     </button>
     <input type="reset" value="Reset">
   </div>
-  <div class="form-group">
-    <div class="card">
-      <div class="card-header">
-        Openlibrary results
-      </div>
-      <div class="list-group"></div>
-    </div>
-  </div>
 </form>
+<div id="libros-results" class="list-group"></div>
 
 <!-- <form id="input-form">
 	<h3>BOOK</h3>
