libros with template

--- a/_includes/widgets/libros.html
+++ b/_includes/widgets/libros.html
@@ -14,7 +14,25 @@
     <input type="reset" value="Reset">
   </div>
 </form>
-<div id="libros-results" class="list-group"></div>
+<div id="libros-results" class="list-group">
+  <template id="template-book">
+    <a href="#" data-book="">
+      <div class="row">
+        <div class="col-2 pr-0">
+          <img src="">
+        </div>
+        <div class="col">
+          <div>
+            <h5></h5>
+            <small></small>
+          </div>
+          <p></p>
+          <small></small>
+        </div>
+      </div>
+    </a>
+  </template>
+</div>
 
 <!-- <form id="input-form">
 	<h3>BOOK</h3>
