yml update working. Gengen - generic generator?

--- a/_includes/components/page_info.html
+++ b/_includes/components/page_info.html
@@ -33,7 +33,7 @@
         </tr>
         <tr>
           <td>Sidebar</td>
-          <td><code>{{ sidebar | inspect }}</code></td>
+          <td><code>{{ sidebar }}</code></td>
         </tr>
         <tr>
           <td>Font-face</td>
