--- a/_includes/page/init.html
+++ b/_includes/page/init.html
@@ -1,3 +1,4 @@
+{%- assign api_stack = site.emptyArray -%}
 {%- capture api -%}
 Load page's `collection`, `fluid` liquid variabiles and `theme`. Are checked in `collection` or `page` scope.
 {%- endcapture -%}
