--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -19,16 +19,19 @@
 
 	<!-- Javascripts CDN -->
 	<!-- jQuery -->
-	<script
-		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<!-- <script
+		src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!-- Popper.js -->
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<!-- Bootstrap -->
-	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<!-- <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
 	<!-- Lz-Sting -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
-	<!-- LZString.compressToBase64(JSON.stringify(schema)) -->
+	<!-- yaml.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/yamljs/0.3.0/yaml.min.js"></script>
 	<!-- Datepicker -->
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.js"></script>
