--- a/_includes/tempus/next.html
+++ b/_includes/tempus/next.html
@@ -1,3 +1,8 @@
+{%- capture api -%}
+Next events
+
+{%- endcapture -%}
+{%- include api/save.html -%}
 {%- assign now = "now" | date: "%s" | plus: 0 -%}
 {%- assign format = include.format | default: "%B %-d %A" -%}
 {%- assign day_seconds = 86400 -%}
