scripts in config

--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -18,23 +18,9 @@
 	<link rel="stylesheet" href="/assets/css/{{ theme }}.css" id="main-css">
 
 	<!-- Javascripts CDN -->
-	<!-- jQuery -->
-	<!-- <script
-		src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<!-- Popper.js -->
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<!-- Bootstrap -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<!-- <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script> -->
-	<!-- Lz-Sting -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
-	<!-- yaml.js -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/yamljs/0.3.0/yaml.min.js"></script>
-	<!-- Datepicker -->
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.js"></script>
+	{% for script in site.scripts %}
+	<script src="{{ script.url }}"></script>
+	{% endfor %}
 
 	<!-- any-theme.js is deferred -->
 	<script src="/assets/js/any-theme.js" defer></script>
