--- a/_includes/widgets/libros.html
+++ b/_includes/widgets/libros.html
@@ -45,6 +45,11 @@
     <input type="date" id="end_reading" class="form-control" placeholder="End reading"  data-toggle="datepicker">
   </div>
   <pre class="highlight"><code class="language-txt" id="libros-yml"></code></pre>
+  <div class="form-group">
+    <button type="button" class="btn btn-sm btn-outline-secondary" data-clipboard-target="#libros-yml">
+      Copy to clipboard
+    </button>
+  </div>
   </fieldset>
 </form>
 
