--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg">
+	<nav class="navbar navbar-expand-md">
 		<div class="container{{ fluid }}">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarFooter" aria-controls="navbarFooter" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
