--- a/_includes/page/navbar.html
+++ b/_includes/page/navbar.html
@@ -1,6 +1,6 @@
 {%- assign navigation = include.nav | default: site.navbar -%}
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-md">
 	<div class="container{{ fluid }}">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
