--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -14,7 +14,7 @@
 		integrity="sha256-zozDkxLZ4hXQxKEFI8DTVkwNRd0J2KW0LxrN+/2RJVQ="
 		crossorigin="anonymous" />
 
-	{% if font_face %}<link rel="stylesheet" href="/assets/{{ font_face }}">{% endif %}
+	{% if font_face %}<link rel="stylesheet" href="{{ "/assets/" | append: font_face | absolute_url }}">{% endif %}
 	<link rel="stylesheet" href="{{ "/assets/css/" | append: theme | append: ".css" | absolute_url }}" id="main-css">
 
 	<!-- Javascripts CDN -->
