--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -3,6 +3,7 @@
 <head>
 	<title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
 
+	<meta data-build_revision="{{ site.github.build_revision }}">
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
