Fix fonts, introduce cdn and collections

--- a/_includes/js/cdn.html
+++ b/_includes/js/cdn.html
@@ -1,39 +1,4 @@
-title: Jekyll any theme
-description: Jekyll any theme – Customizable Bootstrap 4
-
-plugins:
-  - jekyll-default-layout
-  - jekyll-github-metadata
-  - jekyll-coffeescript
-
-collections:
-  docs:
-    output: true
-
-# Defaults
-defaults:
-  -
-    scope:
-      path: assets/pages
-    values:
-      # fluid: true
-      # navbar: top
-      # theme: dnd
-      font_face: scala/fonts.css
-      google_webfont: Rubik:300,400,400i,500,700
-      sidebar:
-        side: right
-        # width: 4
-        includes:
-          - widgets/toc.html
-  -
-    scope:
-      path: ""
-      type: docs
-    values:
-      permalink: /:collection/:path
-      layout: default
-
+---
 scripts:
   -
     name: jQuery
@@ -56,7 +21,7 @@ scripts:
   -
     name: Clipboard.js
     url: "https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"
-
-emptyArray: []
-
-exclude: ["assets/css_no/"]
+---
+<script type="text/javascript">
+  // ok
+</script>
