--- a/assets/css/basic_light_sans.sass
+++ b/assets/css/basic_light_sans.sass
@@ -31,7 +31,8 @@ $code-font-size: 80%
 
 // Font family
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500,700')
-$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif
+// $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-sans-serif: "Scala Sans SC", sans-serif
 // $font-family-sans-serif: Verdana, Geneva, sans-serif
 $font-family-serif: Georgia, Times, "Times New Roman", serif
 $font-family-headings-header: 'Rubik', sans-serif
